actual overflow fix

--- a/src/components/CampaignDetail/CampaignDetail.css
+++ b/src/components/CampaignDetail/CampaignDetail.css
@@ -71,7 +71,7 @@
 .campaignDetail p {
     font-size: 2vmin;
     padding: 1vh 2vw 0;
-    white-space: pre;
+    white-space: pre-wrap;
     text-wrap: wrap;
 }
 
@@ -79,8 +79,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    max-width: 100%;
     overflow-y: auto;
+}
+
+.description-text {
+    width: 100%;
+}
+
+.description-container {
+    width: 100%;
 }
 
 #tall-campaign-description {
