--- a/src/components/CategoryDetail/CategoryDetail.css
+++ b/src/components/CategoryDetail/CategoryDetail.css
@@ -12,7 +12,7 @@
 
 .category-detail p {
     font-size: 2vmin;
-    white-space: pre;
+    white-space: pre-wrap;
     text-wrap: wrap;
 }
 
