--- a/src/components/SessionNoteDetail/SessionNoteDetail.css
+++ b/src/components/SessionNoteDetail/SessionNoteDetail.css
@@ -30,7 +30,7 @@
     padding: 2vh 3vw 2vh;
     overflow-y: auto;
     font-size: 2vmin;
-    white-space: pre;
+    white-space: pre-wrap;
     text-wrap: wrap;
     border: 2px;
     border-style: solid none solid none;
