--- a/src/components/SubjectDetail/SubjectDetail.css
+++ b/src/components/SubjectDetail/SubjectDetail.css
@@ -10,7 +10,7 @@
 
 .file-detail p {
     font-size: 2vmin;
-    white-space: pre;
+    white-space: pre-wrap;
     text-wrap: wrap;
 }
 
